Fixed the line-height for the pagelinks widget note's CSS. The lines do not overlap anymore.

--- a/client_cms_static/CustomThemes/maciek/ccss/style.css
+++ b/client_cms_static/CustomThemes/maciek/ccss/style.css
@@ -650,7 +650,7 @@ div.small_media_preview div.thumbnail img {
 
 .content_def_link p {
   font-size: 0.7em;
-  line-height: 0.8em;
+  line-height: 1.2em;
   width: 80%;
   color: gray;
 }
